# csgo

./: LICENSE  README.md
godot/: Client.gdextension  Lobby.tscn  Player.tscn  export_presets.cfg  icon.svg.import  project.godot
godot/Armor/: BasicHelmet.tscn
godot/Maps/: Arena.tscn  Lobby.tscn
godot/Weapons/: Ak47.mtl  Ak47.obj.import  Ak47.tscn
rust/: Cargo.toml
rust/client/: Cargo.toml
rust/client/src/: armor.rs  lib.rs  map.rs  player.rs  weapon.rs
rust/client/src/players/: bot.rs  player.rs
rust/server/: Cargo.toml
rust/server/src/: error.rs  main.rs
rust/server/src/player/: mod.rs  position.rs
rust/server/src/server/: mod.rs
