[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand = "0.8.5"

serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.114"

lazy_static = "1.4.0"

